# opengl1

./: CMakeLists.txt  glad.c  main.cpp
